style: fix css performance issue on safari & chrome

--- a/app/styles/_index.styles.css
+++ b/app/styles/_index.styles.css
@@ -1,17 +1,17 @@
 @keyframes zoomIn {
   from {
-    transform: translateZ(-1200px);
+    transform: translateZ(-100px) scale(0);
   }
   to {
-    transform: translateZ(0px);
+    transform: translateZ(0px) scale(1);
   }
 }
 @keyframes zoomOut {
   from {
-    transform: translateZ(-100px) rotate(-180deg);
+    transform: translateZ(-50px) rotate(-180deg) scale(0);
   }
   to {
-    transform: translateZ(0px) rotate(0deg);
+    transform: translateZ(0px) rotate(0deg) scale(1);
   }
 }
 @keyframes fadeInOpacity {
@@ -51,7 +51,7 @@
 
 .pictureContainer figcaption {
   position: absolute;
-  inset: 30% 0;
+  inset: 20% 0;
   margin: auto;
   display: grid;
   align-content: space-around;
@@ -64,18 +64,18 @@
 }
 
 .pictureContainer > picture {
-  animation: 13s ease-out zoomOut;
+  animation: 12s ease-in zoomOut;
   overflow: hidden;
   transition: 1s;
 }
 
 .pictureFrame {
-  animation: 13s ease-out zoomIn;
+  animation: 12s ease-in zoomIn;
   border-radius: 50%;
   position: absolute;
   box-shadow:
     inset 0 0 20px 20px var(--light-bg),
-    0 0 1px 100000px var(--light-bg);
+    0 0 1px 1500px var(--light-bg);
   margin: auto;
   inset: 0px;
   width: 80vh;
@@ -86,6 +86,8 @@
 }
 .smokeLetter {
   animation: smoke 1.5s linear backwards;
+  display: inline-block;
+  will-change: filter;
 }
 .pictureContainer figcaption span:nth-child(1) {
   animation-delay: 2.5s;
@@ -125,6 +127,9 @@
   .pictureFrame {
     width: 80vw;
     height: 80vw;
+    box-shadow:
+      inset 0 0 20px 20px var(--light-bg),
+      0 0 1px 800px var(--light-bg);
   }
   .pictureContainer figcaption {
     font-size: 1.3rem;
