--- a/app/views/LeftNavigation/LeftNavigation.css
+++ b/app/views/LeftNavigation/LeftNavigation.css
@@ -1,4 +1,5 @@
 .nav {
+  grid-area: nav;
   background: var(--lighter-bg);
   box-shadow: var(--main-box-shadow);;
   display: grid;
@@ -47,5 +48,6 @@
 @media screen and (min-width: 640px) {
   .nav {
     box-shadow: var(--main-box-shadow);
+    height: 100%;
   }
 }
